--- a/data-science.html
+++ b/data-science.html
@@ -53,7 +53,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999692398884-data-analyst-data-scientist-corporate-systems-'>IBI Group Data Analyst/ Data Scientist (Corporate Systems) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999692398884-data-analyst-data-scientist-corporate-systems-'>IBI Group Data Analyst/ Data Scientist (Corporate Systems) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -77,7 +77,7 @@
 <p><span class="badge badge-light">Denver San Francisco</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://caseware.workable.com/j/A0AF5CD597'>CaseWare - Jobs: Data Scientist x2 - Apply online</a></h5> 
+<h5><a href='https://caseware.workable.com/j/A0AF5CD597'>CaseWare - Jobs: Data Scientist x2 - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada Toronto</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -109,7 +109,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://anthem.referrals.selectminds.com/jobs/ai-principal-data-scientist-ps14902-38836'>AI Principal Data Scientist - PS14902 - Anthem, Inc. Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://anthem.referrals.selectminds.com/jobs/ai-principal-data-scientist-ps14902-38836'>AI Principal Data Scientist - PS14902 - Anthem, Inc. Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -135,7 +135,7 @@
 <p>Jul 10, 2019 ... Senior Data Scientist - Operational Intelligence Platform. Los Gatos, California. 
 Streaming ? Platform Engineering. Full-time?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tubularlabs/f05e4b8f-f0bd-4e85-b648-87603aeb322c/apply'>Tubular Labs - Data Scientist</a></h5> 
+<h5><a href='https://jobs.lever.co/tubularlabs/f05e4b8f-f0bd-4e85-b648-87603aeb322c/apply'>Tubular Labs - Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Self-identification of veteran status (Completion is voluntary and will not subject 
 you to adverse treatment). Tubular Labs is a Government contractor subject to?...</p>
@@ -175,7 +175,7 @@ Scientist ? Assistant Director drives forward the Business Value Creation...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tempus/jobs/4368937002'>Job Application for Lead Data Scientist, Applied Machine Learning at Tempus</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tempus/jobs/4368937002'>Job Application for Lead Data Scientist, Applied Machine Learning at Tempus</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -196,7 +196,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://talkspace.workable.com/j/A46A942643'>Talkspace - Jobs: Data Scientist, User Behavior - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talkspace.workable.com/j/A46A942643'>Talkspace - Jobs: Data Scientist, User Behavior - Apply online</a></h5> 
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -218,7 +218,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692100973-senior-data-scientist'>Publicis Groupe Senior Data Scientist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692100973-senior-data-scientist'>Publicis Groupe Senior Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -238,7 +238,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wellhealthinc/jobs/4367501002'>Job Application for Data Scientist at WELL Health Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wellhealthinc/jobs/4367501002'>Job Application for Data Scientist at WELL Health Inc.</a></h5> 
 <p><span class="badge badge-light">Santa Barbara</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -305,7 +305,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Melbourne Melbourne Melbourne Melbourne, Victoria, Australia</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692210175-data-scientist-engineer'>Bosch Group Data Scientist Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692210175-data-scientist-engineer'>Bosch Group Data Scientist Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -329,7 +329,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://datatonic.workable.com/j/0455496B74'>Datatonic - Jobs: Data Science Lead - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/0455496B74'>Datatonic - Jobs: Data Science Lead - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -371,7 +371,7 @@ and artificial intelligence advances? In an increasingly connected world, massiv
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/datacamp/jobs/1788671'>Job Application for Part Time Data Science Program Lead  at DataCamp</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/datacamp/jobs/1788671'>Job Application for Part Time Data Science Program Lead  at DataCamp</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -455,7 +455,7 @@ federal?...</p>
 <p><span class="badge badge-light">Michigan, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dcard/jobs/874289'>Job Application for Junior Data Scientist / Machine Learning Engineer at Dcard</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dcard/jobs/874289'>Job Application for Junior Data Scientist / Machine Learning Engineer at Dcard</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
